--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https: ws: data: blob:">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>SpellChecker</title>
+    <title>Node-hid</title>
   </head>
   <body>
     <p>Hello world</p>
